compiler/tests/safety/success/x86-64/trusted-termination.jazz
export
fn eventually_terminates() -> reg u64 {
  reg u64 r c;
  stack u8[1] b;
  reg u64 len = 1;
  ?{}, c = #set0();
  #[no_termination_check]
  while {
    b = #randombytes{1}(b, len);
  } (b[0] != 0) {
    c += 1;
  }
  r = c;
  return r;
}
