compiler/tests/safety/fail/x86-64/load.jazz
export
fn load_last(reg u64 input, reg u64 len) -> reg u64
{
  reg   u64    j;
  stack u64[2] s;
  reg   u8     c;
  reg   u64    res;

  s[0] = 0;
  s[1] = 0;

  j = 0;
  while(j < len)
  { c = [:u8 input + j];
    s[:u8 (uint) j] = c;
    j += 1;
  }

  s[:u8 (uint) j] = 0x1;

  res = s[0];

  return res;
}
